--- a/css/services.css
+++ b/css/services.css
@@ -59,3 +59,10 @@
         width: 40vh;
         height: auto;
     }
+    
+    .services main h2 {
+        font-size: 35px;
+        text-transform: uppercase;
+        margin-top: 30px;
+        padding-left: 70px;
+    }
