--- a/css/contact.css
+++ b/css/contact.css
@@ -60,3 +60,18 @@ nav a:before {
 nav a:hover:before {
     width: 100%;
 }
+
+main {
+    display: flex;
+    justify-content: space-around;
+}
+
+.slider {
+    width: 60%;
+    max-height: 350px;
+}
+
+.slider img {
+    width: 100%;
+    height: 350px;
+}
